[B]Version v0.5.1[/B]
- Removed starting notification.

[B]Version v0.5.0[/B]
- New Turtle version with DM fix.

[B]Version v0.4.9[/B]
- Disabled Google Analytics by default. Later it settings might be provided.

[B]Version v0.4.8[/B]
- Removed GA for video title.

[B]Version v0.4.7[/B]
- Enabled Queue of Audio URL when Audio player is ON.

[B]Version v0.4.6[/B]
- Added Entertainment-biz.

[B]Version v0.4.4 - v0.4.5[/B]
- Added new playit plugin to resolve URL for XBMC player.
- Added SoundCloud snapper.

[B]Version v0.4.3[/B]
- Added VEVO add-on delegator.
- Added BBC iPlayer add-on delegator.

[B]Version v0.4.2[/B]
- Fixed Dailymotion links.
- Increased YouTube Playlist limit to 50 video songs (MAX).

[B]Version v0.4.1[/B]
- Updated to newer version of TurtleX.

[B]Version v0.4.0[/B]
- Updated to newer version of TurtleX to support valid_url functionality of URLResolver.

[B]Version v0.3.8 - v0.3.9[/B]
- Added Google Analytics parameters.

[B]Version v0.3.7[/B]
- Added support to play Audio Streams.

[B]Version v0.3.6[/B]
- Error handling.

[B]Version v0.3.5[/B]
- YouTube video URL with embedded feature fixed.

[B]Version v0.3.4[/B]
- Making compatible with new Turtle version Google Analytics.

[B]Version v0.3.3[/B]
- Handled google shortened URL.

[B]Version v0.3.2[/B]
- Handled HttpError occurs when incorrect URL passed.

[B]Version v0.3.1[/B]
- Marked as stable version.

[B]Version v0.2.3[/B]
- Updated turtle lib version to 1.4.7 for immediate fixes.

[B]Version v0.2.2[/B]
- Added new setting to select type of playback when new request is pushed.
- Fixing YouTube Standard quality video.

[B]Version v0.2.1[/B]
- Updated turtle version to 1.4.2.

[B]Version v0.2.0[/B]
- Added Zappy's Glass service.
- Added support to play direct media links.

[B]Version v0.1.9[/B]
- Updated turtle version to 1.4.0.

[B]Version v0.1.8[/B]
- Moved to new directory structure.

[B]Version 0.1.6[/B]
- Forgot to add addon Id in initialization. Stupid mistake fixed.
