@@ -1,3 +1,6 @@
+[B]Version v0.6.3[/B]
+- Fixed streaming of video URLs.
+
 [B]Version v0.5.1[/B]
 - Removed starting notification.
 
